balance: balance and withdrawal in progress
